--- a/less.less
+++ b/less.less
@@ -67,7 +67,7 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     background-color: #0a080f;
     font-weight: 200;
     line-height: 2;
@@ -142,12 +142,19 @@
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
     width: 100%;
     max-width: 1240px;
+}
+
+.lecture-container .view-container .view-main .top-panel{
 	overflow:auto;
 	flex:1;
 	-webkit-box-flex: 1;
+}
+.lecture-container .view-container .view-main .bottom-panel{
+	-webkit-box-flex:0;
+	flex:0 0 auto;
+	padding-left:36px;
 }
